--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  overflow-x: hidden;
+}
+
 /* 3D Transforms */
 .transform-style-3d {
   transform-style: preserve-3d;
